--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,7 +132,7 @@ justify-content: center;
 .about-card {
   text-align: center;
   margin-top: 5%;
-  margin-bottom: 5%;
+  margin-bottom: 3%;
   width: 80%;
   background-color: #6a97c4;
   border-radius: 20px;
@@ -164,6 +164,33 @@ justify-content: center;
   color: #f0f0f0; /* Light gray text for readability */
 }
 
+/* SKILLS */
+.skill-row {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+  font-size: 0.95rem;
+  color: #fff;
+  font-size: large;
+}
+
+.skill-label {
+  font-weight: bold;
+  color: rgb(48, 48, 48);
+}
+
+.skill-arrow {
+  color: #000000;
+  font-weight: bold;
+}
+
+.skill-list {
+  color: #e3e3e3;
+}
+
+
 .about-content ul {
   list-style-type: disc;
   margin-left: 1%;
@@ -172,7 +199,7 @@ justify-content: center;
   display: flex; /* Make the list items flex containers */
   flex-direction: row; /* Align items horizontally */
   gap: 3%; /* Add space between list items */
-  max-width: 65%;
+  max-width: 100%;
 }
 
 .about-content ul li {
@@ -180,6 +207,7 @@ justify-content: center;
   font-weight: bold;
   margin-bottom: 0; /* Remove bottom margin for horizontal layout */
   display: inline-block; /* Ensure list items are inline */
+  color: #ffffff;
 }
 
 .link-img {
