--- a/styles/index_desktop_styles.css
+++ b/styles/index_desktop_styles.css
@@ -250,6 +250,12 @@ justify-content: center;
   filter: blur(2px);
 }
 
+.languages-tools{
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-bottom: 2%;
+}
+
 /* Overlay styling */
 .overlay-text {
   position: absolute;
