--- a/styles/index_desktop_styles.css
+++ b/styles/index_desktop_styles.css
@@ -164,6 +164,47 @@ justify-content: center;
   color: #f0f0f0; /* Light gray text for readability */
 }
 
+.certification-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.certification-card {
+  text-align: center;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  width: 80%;
+  background-color: #6a97c4;
+  border-radius: 20px;
+  box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.8); /* Add shadow */
+  padding: 3%; /* Add padding for spacing */
+}
+
+.certification-card h1 {
+  font-size: 2.5rem;
+  margin-bottom: 1%;
+  color: #fff; /* White text for contrast */
+}
+
+.certification-content {
+  text-align: left;
+  padding: 0 20px;
+}
+
+.certification-content h2 {
+  font-size: 1.8rem;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: #fff; /* White text for contrast */
+}
+
+.certification-content p {
+  font-size: 110%;
+  line-height: 1.6;
+  color: #f0f0f0; /* Light gray text for readability */
+}
+
 /* SKILLS */
 .skill-row {
   display: flex;
