--- a/styles/index_desktop_styles.css
+++ b/styles/index_desktop_styles.css
@@ -323,7 +323,6 @@ justify-content: center;
 /* Other classes (unchanged): */
 .projects-container {
   text-align: center;
-  padding: 4% 2%;
   background-color: #111;
 }
 
@@ -397,4 +396,38 @@ justify-content: center;
   color: #39ffd7; /* Teal color for languages/tools */
   display: block; /* Each language/tool appears in a new line */
   margin-top: 5px; /* Add some space between each language/tool */
+}
+
+.resume-container {
+  text-align: center;
+  padding: 50px 20px;
+}
+
+.resume-title {
+  font-size: 2.5rem;
+  margin-bottom: 1%;
+  color: #fff;
+}
+
+.resume-download-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007BFF;
+  color: white;
+  font-size: 1.1rem;
+  text-decoration: none;
+  border-radius: 25px;
+  transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
+}
+
+.resume-download-button:hover {
+  background-color: #0056b3;
+  transform: scale(1.05);
+}
+
+.resume-img {
+  height: 20px;
+  width: 20px;
+  margin-left: 5px;
+  /* vertical-align: middle; */
 }
