--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -112,7 +112,7 @@ footer {
 }
 
 .projects {
-  padding: 3rem 1rem;
+  padding: 0rem 1rem;
   background-color: #111;
   color: #fff;
   text-align: center;
@@ -146,11 +146,11 @@ footer {
 }
 
 .project-card h2 {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 
 .project-desc {
-  font-size: 0.95rem;
+  font-size: 0.9rem;
   color: #f0f0f0;
   line-height: 1.4;
 }
@@ -158,7 +158,8 @@ footer {
 .project-link {
   display: inline-block;
   margin-bottom: 1rem;
-  padding: 8px 16px;
+  padding: 4px 10px;
+  font-size: 0.9rem;
   background-color: #fff;
   color: #111;
   border-radius: 10px;
@@ -237,4 +238,33 @@ footer {
 
 .back-home-btn:active {
   transform: scale(0.98);
+}
+
+.resume-container {
+  text-align: center;
+  padding: 50px 20px;
+}
+
+.resume-title {
+  font-size: 2.5rem;
+  margin-bottom: 1%;
+  color: #fff;
+}
+
+.resume-download-button {
+  display: inline-block;
+  padding: 8px 16px;
+  background-color: #007BFF;
+  color: white;
+  font-size: 1rem;
+  text-decoration: none;
+  border-radius: 25px;
+  transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
+}
+
+.resume-img {
+  height: 15px;
+  width: 15px;
+  margin-left: 5px;
+  /* vertical-align: middle; */
 }
