quick-links added

--- a/styles/index_desktop_styles.css
+++ b/styles/index_desktop_styles.css
@@ -431,3 +431,42 @@ justify-content: center;
   margin-left: 5px;
   /* vertical-align: middle; */
 }
+
+.quick-links{
+  display: flex;
+  gap: 30px;
+}
+
+.quick-links-icon{
+  height: 5%;
+  width: 5%;
+  transition: transform 0.2s ease-in-out;
+}
+
+.quick-links-icon:hover{
+  transform: scale(1.2);
+}
+
+.custom-toast {
+  visibility: hidden;
+  min-width: 250px;
+  margin-left: -125px;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  border-radius: 12px;
+  padding: 16px;
+  position: fixed;
+  z-index: 9999;
+  left: 50%;
+  bottom: 50px;
+  font-size: 16px;
+  opacity: 0;
+  transition: opacity 0.5s ease, bottom 0.5s ease;
+}
+
+.custom-toast.show {
+  visibility: visible;
+  opacity: 1;
+  bottom: 70px;
+}
