--- a/styles/index_desktop_styles.css
+++ b/styles/index_desktop_styles.css
@@ -14,7 +14,7 @@
   
   /* Header Styles */
   .header {
-    background: #6a97c4; /* Dark blue background */
+    background: #2c92ff; /* Dark blue background */
     color: #fff;
     padding: 1%; /* Relative padding for responsiveness */
   }
@@ -134,7 +134,7 @@ justify-content: center;
   margin-top: 5%;
   margin-bottom: 3%;
   width: 80%;
-  background-color: #6a97c4;
+  background-color: #2c92ff;
   border-radius: 20px;
   box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.8); /* Add shadow */
   padding: 3%; /* Add padding for spacing */
@@ -164,46 +164,6 @@ justify-content: center;
   color: #f0f0f0; /* Light gray text for readability */
 }
 
-.certification-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.certification-card {
-  text-align: center;
-  margin-top: 3%;
-  margin-bottom: 3%;
-  width: 80%;
-  background-color: #6a97c4;
-  border-radius: 20px;
-  box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.8); /* Add shadow */
-  padding: 3%; /* Add padding for spacing */
-}
-
-.certification-card h1 {
-  font-size: 2.5rem;
-  margin-bottom: 1%;
-  color: #fff; /* White text for contrast */
-}
-
-.certification-content {
-  text-align: left;
-  padding: 0 20px;
-}
-
-.certification-content h2 {
-  font-size: 1.8rem;
-  margin-top: 20px;
-  margin-bottom: 10px;
-  color: #fff; /* White text for contrast */
-}
-
-.certification-content p {
-  font-size: 110%;
-  line-height: 1.6;
-  color: #f0f0f0; /* Light gray text for readability */
-}
 
 /* SKILLS */
 .skill-row {
@@ -251,15 +211,46 @@ justify-content: center;
   color: #ffffff;
 }
 
-.link-img {
-  height: 8%;
-  width: 8%;
-  transition: transform 0.5s ease; /* Smooth transition for the transform */
+
+.certification-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-/* Hover effect */
-.link-img:hover {
-  transform: scale(1.2) rotate(15deg); /* Scale up and tilt to the right */
+.certification-card {
+  text-align: center;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  width: 70%;
+  background-color: #2c92ff;
+  border-radius: 20px;
+  box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.8); /* Add shadow */
+  padding: 2%; /* Add padding for spacing */
+}
+
+.certification-card h1 {
+  font-size: 2.5rem;
+  margin-bottom: 1%;
+  color: #fff; /* White text for contrast */
+}
+
+.certification-content {
+  text-align: left;
+  padding: 0 10px;
+}
+
+.certification-content h2 {
+  font-size: 1.8rem;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: #fff; /* White text for contrast */
+}
+
+.certification-content p {
+  font-size: 110%;
+  line-height: 1.6;
+  color: #f0f0f0; /* Light gray text for readability */
 }
 
 .icon-container {
@@ -268,9 +259,21 @@ justify-content: center;
   margin-top: 20px;
 }
 
+.link-img {
+  height: 8%;
+  width: 8%;
+  transition: transform 0.5s ease; /* Smooth transition for the transform */
+}
+
+/* Hover effect */
+.link-img:hover {
+  transform: scale(1.1) rotate(10deg); /* Scale up and tilt to the right */
+}
+
+
 .project-card {
   position: relative;
-  background-color: #6a97c4;
+  background-color: #2c92ff;
   color: white;
   width: 350px;
   border-radius: 20px;
@@ -327,7 +330,7 @@ justify-content: center;
 }
 
 .projects-title {
-  font-size: 2.5rem;
+  font-size: 2.4rem;
   margin-bottom: 1%;
   color: #fff;
 }
@@ -350,8 +353,8 @@ justify-content: center;
 }
 
 .project-desc {
-  font-size: 0.95rem;
-  margin: 0.5rem 1rem 1rem;
+  font-size: 0.9rem;
+  margin: 0.5rem 1rem 0.5rem;
   color: #f0f0f0;
   line-height: 1.4;
 }
@@ -383,7 +386,7 @@ justify-content: center;
 .languages-tools {
   font-size: 0.9rem; /* Adjust font size */
   color: #e3e3e3; /* Light gray text for better readability */
-  margin-top: 5px; /* Add some space from the description */
+  margin-top: 4px; /* Add some space from the description */
   font-weight: 500; /* Make it a bit bolder for emphasis */
 }
 
@@ -412,7 +415,7 @@ justify-content: center;
 .resume-download-button {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #007BFF;
+  background-color: #2c92ff;
   color: white;
   font-size: 1.1rem;
   text-decoration: none;
@@ -421,7 +424,7 @@ justify-content: center;
 }
 
 .resume-download-button:hover {
-  background-color: #0056b3;
+  background-color: #007bff;
   transform: scale(1.05);
 }
 
@@ -430,21 +433,6 @@ justify-content: center;
   width: 20px;
   margin-left: 5px;
   /* vertical-align: middle; */
-}
-
-.quick-links{
-  display: flex;
-  gap: 30px;
-}
-
-.quick-links-icon{
-  height: 5%;
-  width: 5%;
-  transition: transform 0.2s ease-in-out;
-}
-
-.quick-links-icon:hover{
-  transform: scale(1.2);
 }
 
 .custom-toast {
@@ -469,4 +457,73 @@ justify-content: center;
   visibility: visible;
   opacity: 1;
   bottom: 70px;
+}
+
+/* Contact Section Styles */
+.contact-container {
+  padding-bottom: 5%;
+  text-align: center;
+}
+
+.contact-title {
+  font-size: 2.5rem;
+  margin-bottom: 1%;
+  color: #fff; /* White text for contrast */
+}
+
+.contact-button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.quick-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 55px;
+  background-color:#2c92ff;
+  border-radius: 100px;
+  padding: 30px;
+  width: 50%;
+  position: relative;
+}
+
+.quick-links-icon {
+  width: 65px;
+  height: 65px;
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+
+.quick-links-icon:hover {
+  transform: scale(1.15);
+}
+
+/* Wrapper for tooltip */
+.tooltip-wrapper {
+  position: relative;
+}
+
+/* Tooltip style */
+.tooltip-wrapper::after {
+  content: attr(data-tooltip);
+  position: absolute;
+  bottom: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  /* background: #2c3e50; */
+  color: #fff;
+  padding: 5px 5px;
+  font-size: 0.8rem;
+  white-space: nowrap;
+  border-radius: 5px;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s ease-in-out;
+  z-index: 10;
+}
+
+.tooltip-wrapper:hover::after {
+  opacity: 1;
 }
