--- a/styles/index_desktop_styles.css
+++ b/styles/index_desktop_styles.css
@@ -161,7 +161,7 @@ justify-content: center;
 .about-content p {
   font-size: 110%;
   line-height: 1.6;
-  color: #f0f0f0; /* Light gray text for readability */
+  color: #fff; /* Light gray text for readability */
 }
 
 
@@ -188,14 +188,14 @@ justify-content: center;
 }
 
 .skill-list {
-  color: #e3e3e3;
+  color: #fff;
 }
 
 
 .about-content ul {
   list-style-type: disc;
   margin-left: 1%;
-  color: #f0f0f0; /* Light gray text for readability */
+  color: #fff; /* Light gray text for readability */
   padding-left: 0; /* Remove default padding */
   display: flex; /* Make the list items flex containers */
   flex-direction: row; /* Align items horizontally */
@@ -250,7 +250,7 @@ justify-content: center;
 .certification-content p {
   font-size: 110%;
   line-height: 1.6;
-  color: #f0f0f0; /* Light gray text for readability */
+  color: #fff; /* Light gray text for readability */
 }
 
 .icon-container {
@@ -355,7 +355,7 @@ justify-content: center;
 .project-desc {
   font-size: 0.9rem;
   margin: 0.5rem 1rem 0.5rem;
-  color: #f0f0f0;
+  color: #fff;
   line-height: 1.4;
 }
 
@@ -385,7 +385,7 @@ justify-content: center;
 
 .languages-tools {
   font-size: 0.9rem; /* Adjust font size */
-  color: #e3e3e3; /* Light gray text for better readability */
+  color: #fff; /* Light gray text for better readability */
   margin-top: 4px; /* Add some space from the description */
   font-weight: 500; /* Make it a bit bolder for emphasis */
 }
@@ -414,13 +414,15 @@ justify-content: center;
 
 .resume-download-button {
   display: inline-block;
-  padding: 10px 20px;
+  padding: 10px 25px;
+  margin: 5px;
   background-color: #2c92ff;
   color: white;
   font-size: 1.1rem;
   text-decoration: none;
   border-radius: 25px;
   transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
+  cursor: pointer;
 }
 
 .resume-download-button:hover {
@@ -432,7 +434,7 @@ justify-content: center;
   height: 20px;
   width: 20px;
   margin-left: 5px;
-  /* vertical-align: middle; */
+  vertical-align: middle;
 }
 
 .custom-toast {
