--- a/styles/index_desktop_styles.css
+++ b/styles/index_desktop_styles.css
@@ -440,7 +440,6 @@ justify-content: center;
 .custom-toast {
   visibility: hidden;
   min-width: 250px;
-  margin-left: -125px;
   background-color: #333;
   color: #fff;
   text-align: center;
@@ -452,6 +451,7 @@ justify-content: center;
   bottom: 50px;
   font-size: 16px;
   opacity: 0;
+  transform: translateX(-50%); /* Centers it horizontally */
   transition: opacity 0.5s ease, bottom 0.5s ease;
 }
 
