--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -15,7 +15,7 @@ body {
 
 /* HEADER */
 header {
-  background-color: #6a97c4;
+  background-color: #2c92ff;
   padding: 0.5rem 0;
 }
 
@@ -77,7 +77,7 @@ h1 {
 }
 
 .skills li {
-  background-color: #6a97c4;
+  background-color: #2c92ff;
   color: #fff;
   padding: 0.4rem 0.9rem;
   border-radius: 12px;
@@ -98,10 +98,6 @@ h1 {
   height: 50px;
   transition: transform 0.3s ease;
   cursor: pointer;
-}
-
-.certs img:hover {
-  transform: scale(1.1) rotate(10deg);
 }
 
 /* FOOTER */
@@ -126,17 +122,12 @@ footer {
 }
 
 .project-card {
-  background-color: #6a97c4;
+  background-color: #2c92ff;
   width: 90%;
-  max-width: 100%;
+  max-width: 350px;
   border-radius: 20px;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
   overflow: hidden;
-  transition: transform 0.3s ease;
-}
-
-.project-card:hover {
-  transform: translateY(-5px);
 }
 
 .project-img {
@@ -151,7 +142,7 @@ footer {
 
 .project-desc {
   font-size: 0.9rem;
-  color: #f0f0f0;
+  color: #fff;
   line-height: 1.4;
 }
 
@@ -188,18 +179,13 @@ footer {
   box-shadow: 0px 4px 8px rgba(57, 255, 215, 0.4);
 }
 
-.show-more-btn:hover {
-  background-color: #2fe0bb;
-  transform: scale(1.05);
-}
-
 .show-more-btn:active {
   transform: scale(0.98);
 }
 
 .languages-tools {
   font-size: 0.9rem; /* Adjust font size */
-  color: #e3e3e3; /* Light gray text for better readability */
+  color: #fff; /* Light gray text for better readability */
   margin-top: 5px; /* Add some space from the description */
   font-weight: 500; /* Make it a bit bolder for emphasis */
 }
@@ -231,40 +217,88 @@ footer {
   box-shadow: 0px 4px 8px rgba(57, 255, 215, 0.4);
 }
 
-.back-home-btn:hover {
-  background-color: #2fe0bb;
-  transform: scale(1.05);
-}
-
 .back-home-btn:active {
   transform: scale(0.98);
 }
 
 .resume-container {
   text-align: center;
-  padding: 50px 20px;
 }
 
 .resume-title {
   font-size: 2.5rem;
-  margin-bottom: 1%;
+  /* margin-bottom: 1%; */
   color: #fff;
 }
 
 .resume-download-button {
   display: inline-block;
   padding: 8px 16px;
-  background-color: #007BFF;
+  margin: 10px;
+  background-color: #2c92ff;
   color: white;
   font-size: 1rem;
   text-decoration: none;
   border-radius: 25px;
-  transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
 }
 
 .resume-img {
   height: 15px;
   width: 15px;
   margin-left: 5px;
-  /* vertical-align: middle; */
+}
+
+/* Contact Section Styles */
+.contact-container {
+  padding-bottom: 5%;
+  text-align: center;
+}
+
+.contact-button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.quick-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10%;
+  margin-bottom: 0%;
+  background-color:#2c92ff;
+  border-radius: 100px;
+  padding: 10px;
+  width: 90%;
+  max-width: 350px;
+  vertical-align: middle;
+}
+
+.quick-links-icon {
+  width: 35px;
+  height: 35px;
+}
+
+.custom-toast {
+  visibility: hidden;
+  min-width: 60%;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  border-radius: 12px;
+  padding: 10px;
+  position: fixed;
+  z-index: 9999;
+  left: 50%; /* center horizontally */
+  bottom: 50px;
+  font-size: 90%;
+  opacity: 0;
+  transform: translateX(-50%); /* adjust position back by 50% of its width */
+  transition: opacity 0.5s ease, bottom 0.5s ease;
+}
+
+.custom-toast.show {
+  visibility: visible;
+  opacity: 1;
+  bottom: 60px;
 }
